# wor-simulation

./: .clang-format  .gitignore  README.md  compile_commands.json  demo.sh  launch.sh
config/: rqt_config.perspective  rviz_config.rviz
docs/: handleiding.md
docs/astah/: robot_simulation.asta
docs/export/: handleiding.md  ontwerpdocument.md
docs/handleiding/: installatie.md  interactie.md
docs/hoofdstukken/: application.md  handleiding.md  installatie.md  interactie.md  ontwerp.md  ontwerpdocument_raw.md  packages.md  requirements.md  titelblad.md
docs/ontwerp/: application.md  packages.md
src/robot_simulation/: CMakeLists.txt  package.xml
src/robot_simulation/config/: lynxmotion_rviz.rviz  rqt_config.perspective
src/robot_simulation/include/robot_simulation/: arm_node.h  cup_node.h  robot_arm.h
src/robot_simulation/include/utils/: math_utils.h  string_utils.h
src/robot_simulation/launch/: robot.launch.py  robot_simulation.launch.py  robot_simulation_launch.py  rviz.launch.py
src/robot_simulation/model/: wor_sim_cup.stl
src/robot_simulation/src/: arm_node.cpp  cup_node.cpp  math_utils.cpp  robot_arm.cpp  string_utils.cpp
src/robot_simulation/urdf/: lynxmotion_rviz.rviz
src/simulation_msgs/: CMakeLists.txt  package.xml
src/simulation_msgs/msg/: CupPickup.msg  State.msg
